tests/should_fail/match_char_pattern_on_int.nv
module test
// match: Char literal pattern on Int type
fn bad(n: Int) -> String {
    return match n {
        'a' => "yes",
        _   => "no"
    }
}
